[package]
name = "azf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "^0.24"
sys-locale = "^0.2"
colored = "^2.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1 
panic = "abort"

